All done with one page

--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -1459,47 +1459,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 14,
       "id": "6bd3015f-1757-469e-a54d-21cd3ee5755a",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "6bd3015f-1757-469e-a54d-21cd3ee5755a",
-        "outputId": "9ee892ac-e701-4c37-91ba-c62b92cb7883"
+        "outputId": "4ddc4c29-02bc-4c30-bc3e-c5a3a5d1d4d6"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "https://brickset.com/sets/year-2019\n",
-            "                                                Set  Price_Euro  Pieces  Minifigs\n",
-            "0                                     Corner Garage      179.99    2569       6.0\n",
-            "1                                      Ford Mustang      169.99    1471       NaN\n",
-            "2                       NASA Apollo 11 Lunar Lander       99.99    1087       2.0\n",
-            "3                                 Gingerbread House       89.99    1477       2.0\n",
-            "4                           Harley-Davidson Fat Boy       89.99    1023       NaN\n",
-            "5                                        Woody & RC        9.74      69       1.0\n",
-            "6                          Duke Caboom's Stunt Show       19.49     120       2.0\n",
-            "7           Buzz and Bo Peep's Playground Adventure       24.36     139       3.0\n",
-            "8                                       RV Vacation       34.11     178       3.0\n",
-            "9                    Buzz & Woody's Carnival Mania!       49.99     230       5.0\n",
-            "10                          Carnival Thrill Coaster       19.49      98       2.0\n",
-            "11                               My First Tow Truck        9.74      11       NaN\n",
-            "12                       My First Balancing Animals       14.61      15       NaN\n",
-            "13                              My First Fun Puzzle       19.49      15       NaN\n",
-            "14                           My First Car Creations       19.99      34       NaN\n",
-            "15                                     Creative Fun       34.99     120       1.0\n",
-            "16                          Mickey's Vacation House       48.73      57       3.0\n",
-            "17                           Spider-Man vs. Electro       19.99      29       2.0\n",
-            "18                                  Toy Story Train       19.99      21       2.0\n",
-            "19  Emmet and Lucy's Visitors from the DUPLO Planet       29.99      53       2.0\n",
-            "20                            My First Minnie Build        9.99      10       NaN\n",
-            "21                            My First Mickey Build        9.74       9       NaN\n",
-            "22                                Frozen Ice Castle       49.99      59       3.0\n",
-            "23                                      Police Bike        9.99       8       1.0\n",
-            "24                                       Fire Truck       19.99      21       2.0\n"
+            "https://brickset.com/sets/year-2019\n"
           ]
         }
       ],
@@ -1513,8 +1487,6 @@
         "import numpy as np\n",
         "import time\n",
         "\n",
-        "\n",
-        "pd.set_option('display.width', 1000)\n",
         "\n",
         "def collectLegoSets(url):\n",
         "    time.sleep(4)\n",
@@ -1560,7 +1532,10 @@
         "    data = pd.DataFrame(data, columns=['Set', 'Price_Euro', 'Pieces', 'Minifigs'])\n",
         "\n",
         "    return data\n",
-        "\n"
+        "\n",
+        "scraped_data = collectLegoSets('https://brickset.com/sets/year-2019')\n",
+        "\n",
+        "scraped_data.to_csv(\"lego2019.csv\", index=False)\n"
       ]
     }
   ],
