Added the additional pages, program looks to have all 34

--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -1459,21 +1459,68 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 16,
       "id": "6bd3015f-1757-469e-a54d-21cd3ee5755a",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "6bd3015f-1757-469e-a54d-21cd3ee5755a",
-        "outputId": "4ddc4c29-02bc-4c30-bc3e-c5a3a5d1d4d6"
+        "outputId": "ccb12765-9dbd-42a7-fcb9-4710ca607ed7"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "https://brickset.com/sets/year-2019\n"
+            "https://brickset.com/sets/year-2019\n",
+            "https://brickset.com/sets/year-2019/page-2\n",
+            "https://brickset.com/sets/year-2019/page-3\n",
+            "https://brickset.com/sets/year-2019/page-4\n",
+            "https://brickset.com/sets/year-2019/page-5\n",
+            "https://brickset.com/sets/year-2019/page-6\n",
+            "https://brickset.com/sets/year-2019/page-7\n",
+            "https://brickset.com/sets/year-2019/page-8\n",
+            "https://brickset.com/sets/year-2019/page-9\n",
+            "https://brickset.com/sets/year-2019/page-10\n",
+            "https://brickset.com/sets/year-2019/page-11\n",
+            "https://brickset.com/sets/year-2019/page-12\n",
+            "https://brickset.com/sets/year-2019/page-13\n",
+            "https://brickset.com/sets/year-2019/page-14\n",
+            "https://brickset.com/sets/year-2019/page-15\n",
+            "https://brickset.com/sets/year-2019/page-16\n",
+            "https://brickset.com/sets/year-2019/page-17\n",
+            "https://brickset.com/sets/year-2019/page-18\n",
+            "https://brickset.com/sets/year-2019/page-19\n",
+            "https://brickset.com/sets/year-2019/page-20\n",
+            "https://brickset.com/sets/year-2019/page-21\n",
+            "https://brickset.com/sets/year-2019/page-22\n",
+            "https://brickset.com/sets/year-2019/page-23\n",
+            "https://brickset.com/sets/year-2019/page-24\n",
+            "https://brickset.com/sets/year-2019/page-25\n",
+            "https://brickset.com/sets/year-2019/page-26\n",
+            "https://brickset.com/sets/year-2019/page-27\n",
+            "https://brickset.com/sets/year-2019/page-28\n",
+            "https://brickset.com/sets/year-2019/page-29\n",
+            "https://brickset.com/sets/year-2019/page-30\n",
+            "https://brickset.com/sets/year-2019/page-31\n",
+            "https://brickset.com/sets/year-2019/page-32\n",
+            "https://brickset.com/sets/year-2019/page-33\n",
+            "https://brickset.com/sets/year-2019/page-34\n",
+            "                            Set  Price_Euro  Pieces  Minifigs\n",
+            "0                 Corner Garage      179.99  2569.0       6.0\n",
+            "1                  Ford Mustang      169.99  1471.0       NaN\n",
+            "2   NASA Apollo 11 Lunar Lander       99.99  1087.0       2.0\n",
+            "3             Gingerbread House       89.99  1477.0       2.0\n",
+            "4       Harley-Davidson Fat Boy       89.99  1023.0       NaN\n",
+            "..                          ...         ...     ...       ...\n",
+            "19                 Stormbreaker         NaN    27.0       NaN\n",
+            "20                   Tantive IV         NaN    56.0       NaN\n",
+            "21            Tree in the Woods         NaN    53.0       NaN\n",
+            "22            X-wing Trench Run         NaN    52.0       NaN\n",
+            "23          Mini X-wing Fighter         NaN    60.0       NaN\n",
+            "\n",
+            "[849 rows x 4 columns]\n"
           ]
         }
       ],
@@ -1489,7 +1536,7 @@
         "\n",
         "\n",
         "def collectLegoSets(url):\n",
-        "    time.sleep(4)\n",
+        "    time.sleep(12)\n",
         "    print(url)\n",
         "    site = requests.get(url)\n",
         "    soup = BeautifulSoup(site.text)\n",
@@ -1531,11 +1578,21 @@
         "\n",
         "    data = pd.DataFrame(data, columns=['Set', 'Price_Euro', 'Pieces', 'Minifigs'])\n",
         "\n",
-        "    return data\n",
+        "    try:\n",
+        "      next_page = soup.find('li', class_='next').a['href']\n",
+        "    except:\n",
+        "      next_page = None\n",
+        "\n",
+        "    if next_page:\n",
+        "      return pd.concat([data, collectLegoSets(next_page)], axis=0)\n",
+        "    else:\n",
+        "      return data\n",
         "\n",
         "scraped_data = collectLegoSets('https://brickset.com/sets/year-2019')\n",
         "\n",
-        "scraped_data.to_csv(\"lego2019.csv\", index=False)\n"
+        "scraped_data.to_csv(\"lego2019.csv\", index=False)\n",
+        "\n",
+        "print(scraped_data)\n"
       ]
     }
   ],
